Fixed performance issues
fixed the score so that it records every attempt to match cards and does not add an additional point when matched.

fixed the alert and countdown not showing and stopping when fully matched

added a lowest scores list and a function to clear them.

--- a/style.css
+++ b/style.css
@@ -94,3 +94,13 @@ p {
   background-position: center center;
   background-size: cover;
 }
+
+#lowest-scores {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.score {
+  margin: 20px;
+}
